name:                seal-mpt
version:             1.0.0
synopsis:            Seal - MerklePatricia Tree
description:         Seal - MerklePatricia Tree
license:             MIT
license-file:        LICENSE
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Seal.Mpt
                       Seal.Mpt.MerklePatricia
                       Seal.Mpt.MerklePatricia.Utils
  other-modules:
                       Seal.Mpt.MerklePatricia.Diff
                       Seal.Mpt.MerklePatricia.Internal
                       Seal.Mpt.MerklePatricia.InternalMem
                       Seal.Mpt.MerklePatricia.MPDB
                       Seal.Mpt.MerklePatricia.NodeData
                       Seal.Mpt.MerklePatricia.StateRoot
                       Seal.Mpt.MerklePatriciaMem

  build-depends:       base >=4.7 && <5
                     , base16-bytestring
                     , binary
                     , bytestring
                     , seal-rocksdb
                     , seal-binary
                     , seal-core
                     , seal-util
                     , containers
                     , cryptonite
                     , memory
                     , mtl
                     , nibblestring
                     , resourcet
                     , rocksdb-haskell-ng
                     , text
                     , transformers
                     , unordered-containers
                     , universum >=0.1.11

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp